# kanban-fastapi

./: README.md  docker-compose.yml
backend/: .env  auth.py  config.py  crud.py  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  main.py  models.py  pyproject.toml  run.sh  schemas.py  security.py
frontend/: package-lock.json  package.json
frontend/src/: index.js
frontend/src/components/: AddColumn.jsx  AddTask.jsx  Board.jsx  Column.jsx  Login.jsx  Logout.jsx  Register.jsx  Task.jsx
